modified index html file

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hello World!!!</title>
+  <title>Document</title>
 </head>
 <body>
-  <h1>Hello World!!! I'm changing this now.</h1>
+  <h1>GIT this to GIThub!</h1>
 </body>
 </html>
